First cart with caption

--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
 <body>
 
     <div id="container">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+
+        <div class="row">
+
+            <div id="levis" class="card">           
+
+                <div class="item-details">
+                    Levi's <br /> 
+                    <strong>RELAXED FIT TEE UNISEX</strong> <br /> 
+                    <span class="mark">19,99 </span> <del> 29,99</del>
+                </div>
+                
+                <span class="discount">-30%</span>
+
+            </div>
+
+        </div>
     </div>
+
 </body>
 </html>
