First card base end - NO HOVER YET

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 </div>
                 
                 <span class="discount">-30%</span>
+                <span class="sustainable">Sostenibilit&agrave;</span>
+                <span class="favorite">&hearts;</span>
 
             </div>
 
