Add second line

--- a/bonus/bonus.html
+++ b/bonus/bonus.html
@@ -30,12 +30,12 @@
                     <span class="favorite">&hearts;</span> 
                 </figure>   
             </div>
-            <div id="levis-relaxed" class="card">
+            <div id="guess" class="card">
                 <figure>
-                    <img src="../img/1.webp" alt="levis outfit">  
+                    <img src="../img/2.webp" alt="Guess outfit">  
                     <figcaption>
-                        Levi's <br /> 
-                        <strong>RELAXED FIT TEE UNISEX</strong> <br /> 
+                        Guess <br /> 
+                        <strong>ROSES TEE</strong> <br /> 
                         <span class="mark">19,99 </span> <del> 29,99</del>
                     </figcaption>
 
@@ -44,17 +44,66 @@
                     <span class="favorite">&hearts;</span> 
                 </figure>   
             </div>
-            <div id="levis-relaxed" class="card">
+            <div id="come-zucchero-filato" class="card">
                 <figure>
-                    <img src="../img/1.webp" alt="levis outfit">  
+                    <img src="../img/3.webp" alt="Zucchero Filato outfit">  
                     <figcaption>
-                        Levi's <br /> 
-                        <strong>RELAXED FIT TEE UNISEX</strong> <br /> 
-                        <span class="mark">19,99 </span> <del> 29,99</del>
+                        Come Zucchero Filato <br /> 
+                        <strong>VOGLIA DI COLORI PASTELLO</strong> <br /> 
+                        <span class="mark">219,99 </span>
                     </figcaption>
 
                     <span class="discount">-30%</span>
                     <span class="sustainable">Sostenibilit&agrave;</span>
                     <span class="favorite">&hearts;</span> 
+                </figure> 
+            </div>                
+                
+        </div>
+
+        <!-- Seconda riga -->
+        <div class="row">
+
+            <div id="levis" class="card">
+                <figure>
+                    <img src="../img/4.webp" alt="levis outfit">  
+                    <figcaption>
+                        Levi's <br /> 
+                        <strong>TEE UNISEX</strong> <br /> 
+                        <span class="mark">19,99 </span> <del> 29,99</del>
+                    </figcaption>
+
+                    <span class="discount">-30%</span>
+                    <span class="sustainable">Sostenibilit&agrave;</span>
+                    <span class="favorite">&hearts;</span>
                 </figure>   
             </div>
+            <div id="maya-deluxe" class="card">
+                <figure>
+                    <img src="../img/5.webp" alt="Maya outfit">  
+                    <figcaption>
+                        Maya Deluxe <br /> 
+                        <strong>STRIPE BODICE</strong> <br /> 
+                        <span class="mark">99,99 </span>
+                    </figcaption>
+
+                    <span class="discount">-30%</span>
+                    <span class="favorite">&hearts;</span> 
+                </figure>   
+            </div>
+            <div id="esprit" class="card">
+                <figure>
+                    <img src="../img/6.webp" alt="Esprit outfit">  
+                    <figcaption>
+                        Esprit <br /> 
+                        <strong>MAGLIONE - BLACK</strong> <br /> 
+                        <span class="mark">29,99 </span>
+                    </figcaption>
+
+                    <span class="discount">-30%</span>
+                    <span class="sustainable">Sostenibilit&agrave;</span>
+                    <span class="favorite">&hearts;</span>
+                </figure> 
+            </div>                                
+        </div>
+    </div>
