--- a/bonus/bonus.html
+++ b/bonus/bonus.html
@@ -18,7 +18,8 @@
 
             <div id="levis-relaxed" class="card">
                 <figure>
-                    <img src="../img/1.webp" alt="levis outfit">  
+                    <img src="../img/1.webp" alt="levis outfit">
+                    <img class="img-hover" src="../img/1b.webp" alt="levis outfit">    
                     <figcaption>
                         Levi's <br /> 
                         <strong>RELAXED FIT TEE UNISEX</strong> <br /> 
@@ -34,6 +35,7 @@
                 <figure>
                     <img src="../img/2.webp" alt="Guess outfit">  
                     <figcaption>
+                    <img class="img-hover" src="../img/2b.webp" alt="levis outfit">
                         Guess <br /> 
                         <strong>ROSES TEE</strong> <br /> 
                         <span class="mark">19,99 </span> <del> 29,99</del>
@@ -47,6 +49,7 @@
             <div id="come-zucchero-filato" class="card">
                 <figure>
                     <img src="../img/3.webp" alt="Zucchero Filato outfit">  
+                    <img class="img-hover" src="../img/3b.webp" alt="levis outfit">
                     <figcaption>
                         Come Zucchero Filato <br /> 
                         <strong>VOGLIA DI COLORI PASTELLO</strong> <br /> 
@@ -67,6 +70,7 @@
             <div id="levis" class="card">
                 <figure>
                     <img src="../img/4.webp" alt="levis outfit">  
+                    <img class="img-hover" src="../img/4b.webp" alt="levis outfit">  
                     <figcaption>
                         Levi's <br /> 
                         <strong>TEE UNISEX</strong> <br /> 
@@ -80,7 +84,8 @@
             </div>
             <div id="maya-deluxe" class="card">
                 <figure>
-                    <img src="../img/5.webp" alt="Maya outfit">  
+                    <img src="../img/5.webp" alt="Maya outfit"> 
+                    <img class="img-hover" src="../img/5b.webp" alt="levis outfit">   
                     <figcaption>
                         Maya Deluxe <br /> 
                         <strong>STRIPE BODICE</strong> <br /> 
@@ -93,7 +98,8 @@
             </div>
             <div id="esprit" class="card">
                 <figure>
-                    <img src="../img/6.webp" alt="Esprit outfit">  
+                    <img src="../img/6.webp" alt="Esprit outfit">
+                    <img class="img-hover" src="../img/6b.webp" alt="levis outfit">    
                     <figcaption>
                         Esprit <br /> 
                         <strong>MAGLIONE - BLACK</strong> <br /> 
