Move span out of figure

--- a/bonus/bonus.html
+++ b/bonus/bonus.html
@@ -25,11 +25,10 @@
                         <strong>RELAXED FIT TEE UNISEX</strong> <br /> 
                         <span class="mark">19,99 </span> <del> 29,99</del>
                     </figcaption>
-
-                    <span class="discount">-30%</span>
-                    <span class="sustainable">Sostenibilit&agrave;</span>
-                    <span class="favorite">&hearts;</span> 
-                </figure>   
+                </figure> 
+                <span class="discount">-30%</span>
+                <span class="sustainable">Sostenibilitagrave;</span>
+                <span class="favorite">&hearts;</span>   
             </div>
             <div id="guess" class="card">
                 <figure>
@@ -39,12 +38,11 @@
                         Guess <br /> 
                         <strong>ROSES TEE</strong> <br /> 
                         <span class="mark">19,99 </span> <del> 29,99</del>
-                    </figcaption>
-
-                    <span class="discount">-30%</span>
-                    <span class="sustainable">Sostenibilit&agrave;</span>
-                    <span class="favorite">&hearts;</span> 
-                </figure>   
+                    </figcaption> 
+                </figure>  
+                <span class="discount">-30%</span>
+                <span class="sustainable">Sostenibilit&agrave;</span>
+                <span class="favorite">&hearts;</span> 
             </div>
             <div id="come-zucchero-filato" class="card">
                 <figure>
@@ -55,11 +53,10 @@
                         <strong>VOGLIA DI COLORI PASTELLO</strong> <br /> 
                         <span class="mark">219,99 </span>
                     </figcaption>
-
-                    <span class="discount">-30%</span>
-                    <span class="sustainable">Sostenibilit&agrave;</span>
-                    <span class="favorite">&hearts;</span> 
                 </figure> 
+                <span class="discount">-30%</span>
+                <span class="sustainable">Sostenibilit&agrave;</span>
+                <span class="favorite">&hearts;</span> 
             </div>                
                 
         </div>
@@ -76,11 +73,10 @@
                         <strong>TEE UNISEX</strong> <br /> 
                         <span class="mark">19,99 </span> <del> 29,99</del>
                     </figcaption>
-
-                    <span class="discount">-30%</span>
-                    <span class="sustainable">Sostenibilit&agrave;</span>
-                    <span class="favorite">&hearts;</span>
-                </figure>   
+                </figure> 
+                <span class="discount">-30%</span>
+                <span class="sustainable">Sostenibilit&agrave;</span>
+                <span class="favorite">&hearts;</span>  
             </div>
             <div id="maya-deluxe" class="card">
                 <figure>
@@ -90,11 +86,10 @@
                         Maya Deluxe <br /> 
                         <strong>STRIPE BODICE</strong> <br /> 
                         <span class="mark">99,99 </span>
-                    </figcaption>
-
-                    <span class="discount">-30%</span>
-                    <span class="favorite">&hearts;</span> 
+                    </figcaption> 
                 </figure>   
+                <span class="discount">-30%</span>
+                <span class="favorite">&hearts;</span>
             </div>
             <div id="esprit" class="card">
                 <figure>
@@ -105,11 +100,18 @@
                         <strong>MAGLIONE - BLACK</strong> <br /> 
                         <span class="mark">29,99 </span>
                     </figcaption>
-
-                    <span class="discount">-30%</span>
-                    <span class="sustainable">Sostenibilit&agrave;</span>
-                    <span class="favorite">&hearts;</span>
                 </figure> 
+                <span class="discount">-30%</span>
+                <span class="sustainable">Sostenibilit&agrave;</span>
+                <span class="favorite">&hearts;</span>
             </div>                                
         </div>
+        <p>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="http://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="CSS Valido!" />
+            </a>
+        </p>
+        
     </div>
